Продолжаю делать адаптивную фиксированную сетку. Внос изменение в блоки page-footer, contacts, reviews, proof, features and offers

--- a/source/index.html
+++ b/source/index.html
@@ -42,7 +42,6 @@
   </header>
 
   <main class="page-main">
-
     <section class="page-intro">
       <div class="page-intro__wrapper">
         <h2 class="page-intro__title">Взгляните на жизнь иначе!</h2>
@@ -58,99 +57,61 @@
       </section>
     </section>
 
-
-
-
-
-
-
-
-
-    <!-- <section class="page-intro">
-      <h2 class="visually-hidden">Наше приложение!</h2>
-      <div class="page-intro__wrapper">
-        <img class="page-intro__image" src="img/iphone-hand-mobile@1x.png" width="258" height="286" alt="PINK">
-        <section class="download-app">
-          <div class="download-app__wrapper">
-            <h2 class="download-app__title">Взгляните на жизнь иначе!</h2>
-            <a class="download-app__btn" href="https://www.apple.com/itunes/">Скачать приложение</a>
-            <div class="download-app__platforms">
-              <div class="download-app__platform download-app__platform--Apple"></div>
-              <div class="download-app__platform download-app__platform--Android"></div>
-              <div class="download-app__platform download-app__platform--Windows"></div>
-            </div>
-            <p class="download-app__description">Доступно для iPhone, iPad, Android, Windows Phone, OS X, Windows 8</p>
-          </div>
-        </section>
+    <section class="offer">
+      <div class="container">
+        <h2 class="offer__title">Устали от серости мегаполиса?</h2>
+        <h2 class="offer__title">Нам есть, что вам предложить!</h2>
       </div>
-    </section> -->
+    </section>
 
     <section class="features">
-      <div class="container">
-        <h2 class="visually-hidden">Функции PINK</h2>
-        <div class="features__title">
-          <div class="features__container">
-            <h2 class="features__heading">Устали от серости мегаполиса?</h2>
-            <h2 class="features__heading">Нам есть, что вам предложить!</h2>
-          </div>
-        </div>
-        <div class="features__items">
-          <div class="features__wrapper">
-            <div class="features-item">
-              <h2 class="features-item__title">Поднимает настроение</h2>
-              <p class="features-item__text">Приложение позволит вам победить осеннюю хандру и деперессию буквально в несколько кликов!</p>
-            </div>
-            <div class="features-item">
-              <h2 class="features-item__title">Меняет мир вокруг</h2>
-              <p class="features-item__text">Сделайте снимок и украсьте его смайликом или текстовой подписью, чтобы усилить эффект</p>
-            </div>
-            <div class="features-item">
-              <h2 class="features-item__title">Заводит новых друзей</h2>
-              <p class="features-item__text">Ставьте лайки, комментируте, делитесь фотографиями с друзьями и заводите новых</p>
-            </div>
-          </div>
-        </div>
+      <div class="features__item">
+        <h2 class="features__title">Поднимает настроение</h2>
+        <p class="features__text">Приложение позволит вам победить осеннюю хандру и деперессию буквально в несколько кликов!</p>
       </div>
-      <!--<img class="features__image" src="http://placehold.it/150x100" alt="PINK">-->
+      <div class="features__item">
+        <h2 class="features__title">Меняет мир вокруг</h2>
+        <p class="features__text">Сделайте снимок и украсьте его смайликом или текстовой подписью, чтобы усилить эффект</p>
+      </div>
+      <div class="features__item">
+        <h2 class="features__title">Заводит новых друзей</h2>
+        <p class="features__text">Ставьте лайки, комментируте, делитесь фотографиями с друзьями и заводите новых</p>
+      </div>
     </section>
 
     <section class="proof">
-      <div class="proof__wrapper">
-        <div class="proof__timer">
-        </div>
-        <div class="proof__content">
-          <h2 class="proof__title">Эффект на 24 часа!</h2>
-          <p class="proof__text">Британские ученые провели исследования и доказали, что положительный эффект от использования приложения длится целые сутки!</p>
-          <a class="proof__link" href="#">Узнать больше об исследовании</a>
-        </div>
+      <div class="proof__content">
+        <h2 class="proof__title">Эффект на 24 часа!</h2>
+        <p class="proof__text">«Британские ученые провели исследования и доказали, что положительный эффект от использования приложения длится целые сутки!»</p>
+        <a class="proof__link" href="#">Узнать больше об исследовании</a>
       </div>
     </section>
 
-    <section class="reviews">
-      <div class="reviews__wrapper slider">
-        <h2 class="visually-hidden">Отзывы о нас</h2>
-        <div class="reviews__list  slider__list">
-          <blockquote class="reviews__item  slider__item">
-            <cite class="reviews__author-name reviews__author-container">Николай Петров</cite>
-            <p class="reviews__author-info reviews__author-container">25 лет, водитель трамвая</p>
-            <p class="reviews__text">Это приложение перевернуло мой мир и позволило по-новому взглянуть на привычные серые вещи! А ещё я познакомился сосвоей будущей женой в комментариях к выложенной фотографии!</p>
-          </blockquote>
-          <blockquote class="reviews__item  slider__item">
-            <cite class="reviews__author-name"></cite>
-            <p class="reviews__text"></p>
-          </blockquote>
-          <blockquote class="reviews__item  slider__item">
-            <cite class="reviews__author-name"></cite>
-            <p class="reviews__text"></p>
-          </blockquote>
-        </div>
-        <p class="reviews__toggles slider__toggles">
-          <button class="slider__toggle slider__toggle--active" type="button">1</button>
-          <button class="slider__toggle" type="button">2</button>
-          <button class="slider__toggle" type="button">3</button>
-        </p>
+    <section class="reviews slider">
+      <div class="reviews__wrapper">
+        <article class="reviews__item slider__slide slider__slide--active">
+          <h2 class="reviews__header">Николай Петров</h2>
+          <p class="reviews__description">25 лет, водитель трамвая</p>
+          <q class="reviews__text">Это приложение перевернуло мой мир и позволило по-новому взглянуть на привычные серые вещи! А ещё я познакомился сосвоей будущей женой в комментариях к выложенной фотографии!</q>
+        </article>
+        <article class="reviews__item slider__slide">
+          <h2 class="reviews__header">Николай Петров</h2>
+          <p class="reviews__description">25 лет, водитель трамвая</p>
+          <q class="reviews__text">Это приложение перевернуло мой мир и позволило по-новому взглянуть на привычные серые вещи! А ещё я познакомился сосвоей будущей женой в комментариях к выложенной фотографии!</q>
+        </article>
+        <article class="reviews__item slider__slide">
+          <h2 class="reviews__header">Николай Петров</h2>
+          <p class="reviews__description">25 лет, водитель трамвая</p>
+          <q class="reviews__text">Это приложение перевернуло мой мир и позволило по-новому взглянуть на привычные серые вещи! А ещё я познакомился сосвоей будущей женой в комментариях к выложенной фотографии!</q>
+        </article>
       </div>
+      <span class="slider__review-toggle slider__review-toggle--prev"></span>
+      <span class="slider__review-toggle slider__review-toggle--next"></span>
     </section>
+
+
+
+
 
     <section class="price">
       <div class="price__wrapper">
@@ -202,30 +163,48 @@
     </section>
 
     <section class="contacts">
-      <div class="Contacts__wrapper">
-        <h2 class="visually-hidden">Связаться с нами:</h2>
-        <div class="contacts__container">
-          <h2 class="contacts__heading">Остались вопросы? Свяжитесь с нами!</h2>
-          <div class="contacts__items">
-            <div class="contacts-item">
-              <h3 class="contacts-item__title">Звоните:</h3>
-              <p class="contacts-item__contact">+7 (812) 555-66-66</p>
-            </div>
-            <div class="contacts-item contacts-item--mail">
-              <h3 class="contacts-item__title">Пишите:</h3>
-              <p class="contacts-item__contact">mail@htmlacademy.ru</p>
-            </div>
-            <div class="contacts-item">
-              <h3 class="contacts-item__title">Приезжайте в гости:</h3>
-              <p class="contacts-item__contact">ул. Большая Конюшенная, 19/8</p>
-            </div>
-          </div>
+      <h2 class="visually-hidden">Связаться с нами:</h2>
+      <h2 class="contacts__heading">Остались вопросы?</br> Свяжитесь с нами!</h2>
+      <div class="contacts__items">
+        <div class="contacts__item">
+          <h3 class="contacts__item-title">Звоните:</h3>
+          <a class="contacts__item-contact" href="tel:78125556666">+7 (812) 555-66-66</a>
+        </div>
+        <div class="contacts__item contacts__item--email">
+          <h3 class="contacts__item-title">Пишите:</h3>
+          <a class="contacts__item-contact contacts__item--email" href="mailto:mail@htmlacademy.ru">mail@htmlacademy.ru</a>
+        </div>
+        <div class="contacts__item contacts__item--address">
+          <h3 class="contacts__item-title">Приезжайте в гости:</h3>
+          <p class="contacts__item-contact ">ул. Большая Конюшенная, 19/8</p>
+          </p>
         </div>
       </div>
+      <div class="map"></div>
     </section>
   </main>
 
-  <footer class="page-footer">
+<footer class="page-footer">
+  <a class="page-footer__logo" href="index.html">Pink</a>
+  <div class="social-links">
+    <h2 class="visually-hidden">Социальные сети</h2>
+      <a class="social-links__item social-links__item--twitter" href="https://twitter.com/">Twitter</a>
+      <a class="social-links__item social-links__item--facebook" href="https://www.facebook.com/">Facebook</a>
+      <a class="social-links__item social-links__item--youtube" href="http://www.youtube.com/">YouTube</a>
+    </div>
+    <div class="page-footer__copyright">
+      <h2 class="visually-hidden">Разработано компанией htmlacademy</h2>
+    <p class="page-footer__copyright-text">Разработано<a class="page-footer__copyright-link" href="http://glukhanko.ru/" target="_blank">HTML Academy</a></p>
+    </div>
+</footer>
+
+
+
+
+
+
+
+  <!-- <footer class="page-footer">
     <div class="map" id="map-canvas"></div>
     <div class="page-footer__wrapper">
       <a class="page-footer__logo" href="index.html">
@@ -246,7 +225,7 @@
         </p>
       </section>
     </div>
-  </footer>
+  </footer> -->
 </body>
 
 </html>
