--- a/source/index.html
+++ b/source/index.html
@@ -13,29 +13,27 @@
     <div class="page-header__wrapper">
       <div class="page-header__container">
         <h1 class="visually-hidden">Веб-страница PINK</h1>
-        <div class="page-header_menu">
+        <div class="page-header__menu">
           <a class="page-header__logo">
           <img class="page-header__logo-image" src="http://placehold.it/150x100" alt="Логотип PINK">
           </a>
           <button class="page-header__toggle" type="button">Развернуть/Свернуть</button>
         </div>
         <nav class="main-nav">
-          <div class="main-nav__wrapper">
-            <ul class="main-nav__list site-list">
-              <li class="site-list__item stile-list__item--active">
-                <a class="site-list__link">Главная</a>
-              </li>
-              <li class="site-list__item">
-                <a class="site-list__link" href="photo.html">Фотографии</a>
-              </li>
-              <li class="site-list__item">
-                <a class="site-list__link" href="form.html">Конкурс</a>
-              </li>
-              <li class="site-list__item">
-                <a class="site-list__link" href="#">HTML Academy</a>
-              </li>
-            </ul>
-          </div>
+          <ul class="main-nav__list site-list">
+            <li class="site-list__item stile-list__item--active">
+              <a class="site-list__link">Главная</a>
+            </li>
+            <li class="site-list__item">
+              <a class="site-list__link" href="photo.html">Фотографии</a>
+            </li>
+            <li class="site-list__item">
+              <a class="site-list__link" href="form.html">Конкурс</a>
+            </li>
+            <li class="site-list__item">
+              <a class="site-list__link" href="#">HTML Academy</a>
+            </li>
+          </ul>
         </nav>
       </div>
     </div>
@@ -48,7 +46,7 @@
       </div>
       <section class="download-app">
         <a class="download-app__main-link" href="https://www.apple.com/itunes/">Скачать приложение</a>
-        <div class="pdownload-app__buttons">
+        <div class="download-app__buttons">
           <a class="download-app__button download-app__button--apple" href="#">Apple</a>
           <a class="download-app__button download-app__button--android" href="#">Android</a>
           <a class="download-app__button download-app__button--winphone" href="#">Windows Phone</a>
@@ -108,10 +106,6 @@
       <span class="slider__review-toggle slider__review-toggle--prev"></span>
       <span class="slider__review-toggle slider__review-toggle--next"></span>
     </section>
-
-
-
-
 
     <section class="price">
       <div class="price__wrapper">
@@ -184,48 +178,20 @@
     </section>
   </main>
 
-<footer class="page-footer">
-  <a class="page-footer__logo" href="index.html">Pink</a>
-  <div class="social-links">
-    <h2 class="visually-hidden">Социальные сети</h2>
+  <footer class="page-footer">
+    <a class="page-footer__logo" href="index.html">Pink</a>
+    <div class="social-links">
+      <h2 class="visually-hidden">Социальные сети</h2>
       <a class="social-links__item social-links__item--twitter" href="https://twitter.com/">Twitter</a>
       <a class="social-links__item social-links__item--facebook" href="https://www.facebook.com/">Facebook</a>
       <a class="social-links__item social-links__item--youtube" href="http://www.youtube.com/">YouTube</a>
     </div>
     <div class="page-footer__copyright">
       <h2 class="visually-hidden">Разработано компанией htmlacademy</h2>
-    <p class="page-footer__copyright-text">Разработано<a class="page-footer__copyright-link" href="http://glukhanko.ru/" target="_blank">HTML Academy</a></p>
+      <p class="page-footer__copyright-text">Разработано<a class="page-footer__copyright-link" href="http://glukhanko.ru/" target="_blank">HTML Academy</a></p>
     </div>
-</footer>
+  </footer>
 
-
-
-
-
-
-
-  <!-- <footer class="page-footer">
-    <div class="map" id="map-canvas"></div>
-    <div class="page-footer__wrapper">
-      <a class="page-footer__logo" href="index.html">
-        <img class="page-footer__logo-image" src="http://placehold.it/150x100" alt="Логотип PINK">
-      </a>
-
-      <section class="social-links">
-        <h2 class="visually-hidden">Социальные сети</h2>
-        <a class="social-links__btn social-links__btn--twitter" href="#">Twitter</a>
-        <a class="social-links__btn social-links__btn--facebook" href="#">Facebook</a>
-        <a class="social-links__btn social-links__btn--youtube" href="#">Youtube</a>
-      </section>
-
-      <section class="copyright">
-        <h2 class="visually-hidden">Разработано компанией htmlacademy</h2>
-        <p class="copyright__text">Разработано
-          <a class="copyright__link" href="https://htmlacademy.ru/"></a>
-        </p>
-      </section>
-    </div>
-  </footer> -->
 </body>
 
 </html>
