--- a/source/photo.html
+++ b/source/photo.html
@@ -9,28 +9,33 @@
 
 <body>
   <header class="page-header">
-    <a class="page-header__logo" href="index.html">
-    <!--<img class="page-header__logo-image" src="http://placehold.it/150x100" alt="Логотип PINK">-->
-    </a>
-    <nav class="main-nav">
-      <button class="main-nav__toggle" type="button">Открыть меню</button>
-      <div class="main-nav__wrapper">
-        <ul class="main-nav__list site-list">
-          <li class="site-list__item stile-list__item--active">
-            <a class="site-list__link" href="index.html">Главная</a>
-          </li>
-          <li class="site-list__item">
-            <a class="site-list__link">Фотографии</a>
-          </li>
-          <li class="site-list__item">
-            <a class="site-list__link" href="form.html">Конкурс</a>
-          </li>
-          <li class="site-list__item">
-            <a class="site-list__link" href="#">HTML Academy</a>
-          </li>
-        </ul>
+    <div class="page-header__wrapper">
+      <div class="page-header__container">
+        <h1 class="visually-hidden">Веб-страница PINK</h1>
+        <div class="page-header__menu">
+          <a class="page-header__logo">
+          <img class="page-header__logo-image" src="http://placehold.it/150x100" alt="Логотип PINK">
+          </a>
+          <button class="page-header__toggle" type="button">Развернуть/Свернуть</button>
+        </div>
+        <nav class="main-nav">
+          <ul class="main-nav__list site-list">
+            <li class="site-list__item stile-list__item--active">
+              <a class="site-list__link">Главная</a>
+            </li>
+            <li class="site-list__item">
+              <a class="site-list__link" href="photo.html">Фотографии</a>
+            </li>
+            <li class="site-list__item">
+              <a class="site-list__link" href="form.html">Конкурс</a>
+            </li>
+            <li class="site-list__item">
+              <a class="site-list__link" href="#">HTML Academy</a>
+            </li>
+          </ul>
+        </nav>
       </div>
-    </nav>
+    </div>
   </header>
 
   <main class="page-main">
