--- a/source/index.html
+++ b/source/index.html
@@ -158,7 +158,7 @@
 
     <section class="contacts">
       <h2 class="visually-hidden">Связаться с нами:</h2>
-      <h2 class="contacts__heading">Остались вопросы?</br> Свяжитесь с нами!</h2>
+      <h2 class="contacts__heading">Остались вопросы? Свяжитесь с нами!</h2>
       <div class="contacts__items">
         <div class="contacts__item">
           <h3 class="contacts__item-title">Звоните:</h3>
@@ -171,7 +171,6 @@
         <div class="contacts__item contacts__item--address">
           <h3 class="contacts__item-title">Приезжайте в гости:</h3>
           <p class="contacts__item-contact ">ул. Большая Конюшенная, 19/8</p>
-          </p>
         </div>
       </div>
       <div class="map"></div>
