--- a/source/photo.html
+++ b/source/photo.html
@@ -206,13 +206,13 @@
               </li>
             </ul>
             <div class="filter-range__scale">
-              <div class="filter-range__scale--bar"></div>
-              <div class="filter-range__scale--toggle"></div>
+              <div class="filter-range__scale-bar "></div>
+              <div class="filter-range__scale-toggle"></div>
             </div>
           </div>
           <div class="filter-range__btn">
-            <button class="filter-range__btn--post" type="button">Запостить</button>
-            <button class="filter-range__btn--cancel" type="button">Отмена</button>
+            <button class="filter-range__btn-post" type="button">Запостить</button>
+            <button class="filter-range__btn-cancel" type="button">Отмена</button>
           </div>
         </div>
       </div>
