--- a/source/index.html
+++ b/source/index.html
@@ -63,17 +63,21 @@
     </section>
 
     <section class="features">
-      <div class="features__item">
-        <h2 class="features__title">Поднимает настроение</h2>
-        <p class="features__text">Приложение позволит вам победить осеннюю хандру и деперессию буквально в несколько кликов!</p>
+      <div class="container">
+      <div class="features__wrapper">
+        <div class="features__item">
+          <h2 class="features__title">Поднимает настроение</h2>
+          <p class="features__text">Приложение позволит вам победить осеннюю хандру и деперессию буквально в несколько кликов!</p>
+        </div>
+        <div class="features__item">
+          <h2 class="features__title">Меняет мир вокруг</h2>
+          <p class="features__text">Сделайте снимок и украсьте его смайликом или текстовой подписью, чтобы усилить эффект</p>
+        </div>
+        <div class="features__item">
+          <h2 class="features__title">Заводит новых друзей</h2>
+          <p class="features__text">Ставьте лайки, комментируте, делитесь фотографиями с друзьями и заводите новых</p>
+        </div>
       </div>
-      <div class="features__item">
-        <h2 class="features__title">Меняет мир вокруг</h2>
-        <p class="features__text">Сделайте снимок и украсьте его смайликом или текстовой подписью, чтобы усилить эффект</p>
-      </div>
-      <div class="features__item">
-        <h2 class="features__title">Заводит новых друзей</h2>
-        <p class="features__text">Ставьте лайки, комментируте, делитесь фотографиями с друзьями и заводите новых</p>
       </div>
     </section>
 
