--- a/source/index.html
+++ b/source/index.html
@@ -42,9 +42,10 @@
   <main class="page-main">
     <section class="page-intro">
       <div class="page-intro__wrapper">
-        <h2 class="page-intro__title">Взгляните на жизнь иначе!</h2>
+        <h2 class="page-intro__title container">Взгляните на жизнь иначе!</h2>
       </div>
       <section class="download-app">
+        <div class="container">
         <a class="download-app__main-link" href="https://www.apple.com/itunes/">Скачать приложение</a>
         <div class="download-app__buttons">
           <a class="download-app__button download-app__button--apple" href="#">Apple</a>
@@ -52,6 +53,7 @@
           <a class="download-app__button download-app__button--winphone" href="#">Windows Phone</a>
         </div>
         <p class="download-app__text">Доступно для iPhone, iPad, Android, Windows Phone, OS X, Windows 8</p>
+</div>
       </section>
     </section>
 
