Закончил делат фики адап верстку для index.html

--- a/source/index.html
+++ b/source/index.html
@@ -40,143 +40,164 @@
   </header>
 
   <main class="page-main">
+
     <section class="page-intro">
-      <div class="page-intro__wrapper">
-        <h2 class="page-intro__title container">Взгляните на жизнь иначе!</h2>
+      <div class="page-intro__image">
+        <div class="container">
+          <div class="page-intro__wrapper">
+            <h2 class="page-intro__title">Взгляните на&nbsp;жизнь иначе!</h2>
+          </div>
+        </div>
       </div>
       <section class="download-app">
         <div class="container">
-        <a class="download-app__main-link" href="https://www.apple.com/itunes/">Скачать приложение</a>
-        <div class="download-app__buttons">
-          <a class="download-app__button download-app__button--apple" href="#">Apple</a>
-          <a class="download-app__button download-app__button--android" href="#">Android</a>
-          <a class="download-app__button download-app__button--winphone" href="#">Windows Phone</a>
+          <div class="download-app__wrapper">
+            <a class="download-app__main-link" href="https://www.apple.com/itunes/">Скачать приложение</a>
+            <div class="download-app__buttons">
+              <a class="download-app__button download-app__button--apple" href="#">Apple</a>
+              <a class="download-app__button download-app__button--android" href="#">Android</a>
+              <a class="download-app__button download-app__button--winphone" href="#">Windows Phone</a>
+            </div>
+            <p class="download-app__text">Доступно для iPhone, iPad, Android, Windows Phone, OS X, Windows 8</p>
+          </div>
         </div>
-        <p class="download-app__text">Доступно для iPhone, iPad, Android, Windows Phone, OS X, Windows 8</p>
-</div>
       </section>
     </section>
 
     <section class="offer">
       <div class="container">
-        <h2 class="offer__title">Устали от серости мегаполиса?</h2>
+        <h2 class="offer__title">Устали от&nbsp;серости мегаполиса?</h2>
         <h2 class="offer__title">Нам есть, что вам предложить!</h2>
       </div>
     </section>
 
     <section class="features">
       <div class="container">
-      <div class="features__wrapper">
-        <div class="features__item">
-          <h2 class="features__title">Поднимает настроение</h2>
-          <p class="features__text">Приложение позволит вам победить осеннюю хандру и деперессию буквально в несколько кликов!</p>
+        <div class="features__wrapper">
+          <div class="features__items">
+            <div class="features__item">
+              <h2 class="features__title">Поднимает настроение</h2>
+              <p class="features__text">Приложение позволит вам победить осеннюю хандру и&nbsp;деперессию буквально в&nbsp;несколько кликов!</p>
+            </div>
+            <div class="features__item">
+              <h2 class="features__title">Меняет мир вокруг</h2>
+              <p class="features__text">Сделайте снимок и&nbsp;украсьте его смайликом или текстовой подписью, чтобы усилить эффект</p>
+            </div>
+            <div class="features__item">
+              <h2 class="features__title">Заводит новых друзей</h2>
+              <p class="features__text">Ставьте лайки, комментируте, делитесь&nbsp;фотографиями с друзьями&nbsp;и заводите новых</p>
+            </div>
+          </div>
+          <div class="features__img"></div>
         </div>
-        <div class="features__item">
-          <h2 class="features__title">Меняет мир вокруг</h2>
-          <p class="features__text">Сделайте снимок и украсьте его смайликом или текстовой подписью, чтобы усилить эффект</p>
-        </div>
-        <div class="features__item">
-          <h2 class="features__title">Заводит новых друзей</h2>
-          <p class="features__text">Ставьте лайки, комментируте, делитесь фотографиями с друзьями и заводите новых</p>
-        </div>
-      </div>
       </div>
     </section>
 
     <section class="proof">
-      <div class="proof__content">
-        <h2 class="proof__title">Эффект на 24 часа!</h2>
-        <p class="proof__text">«Британские ученые провели исследования и доказали, что положительный эффект от использования приложения длится целые сутки!»</p>
-        <a class="proof__link" href="#">Узнать больше об исследовании</a>
+      <div class="container">
+        <div class="proof__wrapper">
+          <div class="proof__content">
+            <h2 class="proof__title">Эффект на&nbsp;24&nbsp;часа!</h2>
+            <p class="proof__text">«Британские ученые провели исследования и&nbsp;доказали, что положительный эффект от&nbsp;использования приложения длится целые сутки!»</p>
+            <a class="proof__link" href="#">Узнать больше об исследовании</a>
+          </div>
+        </div>
       </div>
     </section>
 
     <section class="reviews slider">
-      <div class="reviews__wrapper">
-        <article class="reviews__item slider__slide slider__slide--active">
-          <h2 class="reviews__header">Николай Петров</h2>
-          <p class="reviews__description">25 лет, водитель трамвая</p>
-          <q class="reviews__text">Это приложение перевернуло мой мир и позволило по-новому взглянуть на привычные серые вещи! А ещё я познакомился сосвоей будущей женой в комментариях к выложенной фотографии!</q>
-        </article>
-        <article class="reviews__item slider__slide">
-          <h2 class="reviews__header">Николай Петров</h2>
-          <p class="reviews__description">25 лет, водитель трамвая</p>
-          <q class="reviews__text">Это приложение перевернуло мой мир и позволило по-новому взглянуть на привычные серые вещи! А ещё я познакомился сосвоей будущей женой в комментариях к выложенной фотографии!</q>
-        </article>
-        <article class="reviews__item slider__slide">
-          <h2 class="reviews__header">Николай Петров</h2>
-          <p class="reviews__description">25 лет, водитель трамвая</p>
-          <q class="reviews__text">Это приложение перевернуло мой мир и позволило по-новому взглянуть на привычные серые вещи! А ещё я познакомился сосвоей будущей женой в комментариях к выложенной фотографии!</q>
-        </article>
+      <div class="container">
+        <div class="reviews__wrapper">
+          <article class="reviews__item slider__slide slider__slide--active">
+            <h2 class="reviews__header">Николай Петров(1)</h2>
+            <p class="reviews__description">25 лет, водитель трамвая</p>
+            <q class="reviews__text">Это приложение перевернуло мой&nbsp;мир и позволило по-новому взглянуть на привычные серые вещи! А ещё я познакомился сосвоей будущей женой в комментариях к выложенной фотографии!</q>
+          </article>
+          <article class="reviews__item slider__slide">
+            <h2 class="reviews__header">Николай Петров(2)</h2>
+            <p class="reviews__description">25 лет, водитель трамвая</p>
+            <q class="reviews__text">Это приложение перевернуло мой мир и позволило по-новому взглянуть на привычные серые вещи! А ещё я познакомился сосвоей будущей женой в комментариях к выложенной фотографии!</q>
+          </article>
+          <article class="reviews__item slider__slide">
+            <h2 class="reviews__header">Николай Петров(3)</h2>
+            <p class="reviews__description">25 лет, водитель трамвая</p>
+            <q class="reviews__text">Это приложение перевернуло мой мир и позволило по-новому взглянуть на привычные серые вещи! А ещё я познакомился сосвоей будущей женой в комментариях к выложенной фотографии!</q>
+          </article>
+        </div>
+        <span class="slider__review-toggle slider__review-toggle--prev"></span>
+        <span class="slider__review-toggle slider__review-toggle--next"></span>
       </div>
-      <span class="slider__review-toggle slider__review-toggle--prev"></span>
-      <span class="slider__review-toggle slider__review-toggle--next"></span>
     </section>
 
     <section class="price">
-      <div class="price__wrapper">
-        <h2 class="visually-hidden">Цени на услуги PINK</h2>
-        <table class="price-table">
-          <tr>
-            <td class="price-table__header price-table__header--empty"></td>
-            <td class="price-table__header">
-              <div class="price-table__flag">Хит</div>
-              <p class="price-table__title">Анлим</p>
-              <p class="price-table__cost">9,99 USD</p>
-            </td>
-            <td class="price-table__header">
-              <div class="price-table__flag price-table__flag--hit">Хит</div>
-              <p class="price-table__title">Стандарт</p>
-              <p class="price-table__cost">3,99 USD</p>
-            </td>
-            <td class="price-table__header">
-              <div class="price-table__flag">Хит</div>
-              <p class="price-table__title">База</p>
-              <p class="price-table__cost">1,99 USD</p>
-            </td>
-          </tr>
-          <tr>
-            <td class="price-table__service price-table__service--tablet">Розовый фильтр</td>
-            <td class="price-table__service price-table__service--?"><span class="price-table__service-mobile">Розовый фильтр</span></td>
-            <td class="price-table__service price-table__service--?"><span class="price-table__service-mobile">Розовый фильтр</span></td>
-            <td class="price-table__service price-table__service--?"><span class="price-table__service-mobile">Розовый фильтр</span></td>
-          </tr>
-          <tr>
-            <td class="price-table__service price-table__service--tablet">Смайлики</td>
-            <td class="price-table__service price-table__service--yes"><span class="price-table__service-mobile">Смайлики</span></td>
-            <td class="price-table__service price-table__service--yes"><span class="price-table__service-mobile">Смайлики</span></td>
-            <td class="price-table__service price-table__service--no"><span class="price-table__service-mobile">Смайлики</span></td>
-          </tr>
-          <tr>
-            <td class="price-table__service price-table__service--tablet">Комментарии</td>
-            <td class="price-table__service price-table__service--?"><span class="price-table__service-mobile">Комментарии</span></td>
-            <td class="price-table__service price-table__service--?"><span class="price-table__service-mobile">Комментарии</span></td>
-            <td class="price-table__service price-table__service--?"><span class="price-table__service-mobile">Комментарии</span></td>
-          </tr>
-        </table>
-        <p class="price__toggles slider__toggles">
-          <button class="slider__toggle" type="button">1</button>
-          <button class="slider__toggle slider__toggle--active" type="button">2</button>
-          <button class="slider__toggle" type="button">3</button>
-        </p>
+      <div class="container">
+        <div class="price__wrapper">
+          <h2 class="visually-hidden">Цени на услуги PINK</h2>
+          <table class="price-table">
+            <tr>
+              <td class="price-table__header price-table__header--empty"></td>
+              <td class="price-table__header">
+                <div class="price-table__flag">Хит</div>
+                <p class="price-table__title">Анлим</p>
+                <p class="price-table__cost">9,99 USD</p>
+              </td>
+              <td class="price-table__header">
+                <div class="price-table__flag price-table__flag--hit">Хит</div>
+                <p class="price-table__title">Стандарт</p>
+                <p class="price-table__cost">3,99 USD</p>
+              </td>
+              <td class="price-table__header">
+                <div class="price-table__flag">Хит</div>
+                <p class="price-table__title">База</p>
+                <p class="price-table__cost">1,99 USD</p>
+              </td>
+            </tr>
+            <tr>
+              <td class="price-table__service price-table__service--tablet">Розовый фильтр</td>
+              <td class="price-table__service price-table__service--yes"><span class="price-table__service-mobile">Розовый фильтр</span></td>
+              <td class="price-table__service price-table__service--no"><span class="price-table__service-mobile">Розовый фильтр</span></td>
+              <td class="price-table__service price-table__service--no"><span class="price-table__service-mobile">Розовый фильтр</span></td>
+            </tr>
+            <tr>
+              <td class="price-table__service price-table__service--tablet">Смайлики</td>
+              <td class="price-table__service price-table__service--yes"><span class="price-table__service-mobile">Смайлики</span></td>
+              <td class="price-table__service price-table__service--yes"><span class="price-table__service-mobile">Смайлики</span></td>
+              <td class="price-table__service price-table__service--no"><span class="price-table__service-mobile">Смайлики</span></td>
+            </tr>
+            <tr>
+              <td class="price-table__service price-table__service--tablet">Комментарии</td>
+              <td class="price-table__service price-table__service--yes"><span class="price-table__service-mobile">Комментарии</span></td>
+              <td class="price-table__service price-table__service--yes"><span class="price-table__service-mobile">Комментарии</span></td>
+              <td class="price-table__service price-table__service--yes"><span class="price-table__service-mobile">Комментарии</span></td>
+            </tr>
+          </table>
+          <p class="price__toggles slider__toggles">
+            <button class="slider__toggle" type="button">1</button>
+            <button class="slider__toggle slider__toggle--active" type="button">2</button>
+            <button class="slider__toggle" type="button">3</button>
+          </p>
+        </div>
       </div>
     </section>
 
     <section class="contacts">
-      <h2 class="visually-hidden">Связаться с нами:</h2>
-      <h2 class="contacts__heading">Остались вопросы? Свяжитесь с нами!</h2>
-      <div class="contacts__items">
-        <div class="contacts__item">
-          <h3 class="contacts__item-title">Звоните:</h3>
-          <a class="contacts__item-contact" href="tel:78125556666">+7 (812) 555-66-66</a>
-        </div>
-        <div class="contacts__item contacts__item--email">
-          <h3 class="contacts__item-title">Пишите:</h3>
-          <a class="contacts__item-contact contacts__item--email" href="mailto:mail@htmlacademy.ru">mail@htmlacademy.ru</a>
-        </div>
-        <div class="contacts__item contacts__item--address">
-          <h3 class="contacts__item-title">Приезжайте в гости:</h3>
-          <p class="contacts__item-contact ">ул. Большая Конюшенная, 19/8</p>
+      <div class="container">
+        <h2 class="visually-hidden">Связаться с нами:</h2>
+        <h2 class="contacts__heading">Остались вопросы?</h2>
+        <h2 class="contacts__heading">Свяжитесь с нами!</h2>
+        <div class="contacts__items">
+          <div class="contacts__item">
+            <h3 class="contacts__item-title">Звоните:</h3>
+            <a class="contacts__item-contact" href="tel:78125556666">+7 (812) 555-66-66</a>
+          </div>
+          <div class="contacts__item contacts__item--email">
+            <h3 class="contacts__item-title">Пишите:</h3>
+            <a class="contacts__item-contact contacts__item--email" href="mailto:mail@htmlacademy.ru">mail@htmlacademy.ru</a>
+          </div>
+          <div class="contacts__item contacts__item--address">
+            <h3 class="contacts__item-title">Приезжайте в гости:</h3>
+            <p class="contacts__item-contact ">ул. Большая Конюшенная,&nbsp;19/8</p>
+          </div>
         </div>
       </div>
       <div class="map"></div>
@@ -184,16 +205,20 @@
   </main>
 
   <footer class="page-footer">
-    <a class="page-footer__logo" href="index.html">Pink</a>
-    <div class="social-links">
-      <h2 class="visually-hidden">Социальные сети</h2>
-      <a class="social-links__item social-links__item--twitter" href="https://twitter.com/">Twitter</a>
-      <a class="social-links__item social-links__item--facebook" href="https://www.facebook.com/">Facebook</a>
-      <a class="social-links__item social-links__item--youtube" href="http://www.youtube.com/">YouTube</a>
-    </div>
-    <div class="page-footer__copyright">
-      <h2 class="visually-hidden">Разработано компанией htmlacademy</h2>
-      <p class="page-footer__copyright-text">Разработано<a class="page-footer__copyright-link" href="http://glukhanko.ru/" target="_blank">HTML Academy</a></p>
+    <div class="container">
+      <div class="page-footer__wrapper">
+        <a class="page-footer__logo" href="index.html">Pink</a>
+        <div class="social-links">
+          <h2 class="visually-hidden">Социальные сети</h2>
+          <a class="social-links__item social-links__item--twitter" href="https://twitter.com/">Twitter</a>
+          <a class="social-links__item social-links__item--facebook" href="https://www.facebook.com/">Facebook</a>
+          <a class="social-links__item social-links__item--youtube" href="http://www.youtube.com/">YouTube</a>
+        </div>
+        <div class="page-footer__copyright">
+          <h2 class="visually-hidden">Разработано компанией htmlacademy</h2>
+          <p class="page-footer__copyright-text">Разработано<a class="page-footer__copyright-link" href="http://glukhanko.ru/" target="_blank">HTML Academy</a></p>
+        </div>
+      </div>
     </div>
   </footer>
 
