--- a/source/form.html
+++ b/source/form.html
@@ -9,184 +9,222 @@
 
 <body>
   <header class="page-header">
-    <a class="page-header__logo" href="index.html">
-    <!--<<img class="page-header__logo-image" src="http://placehold.it/150x100" alt="Логотип PINK">-->
-    </a>
-    <nav class="main-nav">
-      <button class="main-nav__toggle" type="button">Открыть меню</button>
-      <div class="main-nav__wrapper">
-        <ul class="main-nav__list site-list">
-          <li class="site-list__item stile-list__item--active">
-            <a class="site-list__link" href="index.html">Главная</a>
-          </li>
-          <li class="site-list__item">
-            <a class="site-list__link" href="photo.html">Фотографии</a>
-          </li>
-          <li class="site-list__item">
-            <a class="site-list__link">Конкурс</a>
-          </li>
-          <li class="site-list__item">
-            <a class="site-list__link" href="#">HTML Academy</a>
-          </li>
-        </ul>
+    <div class="page-header__wrapper">
+      <div class="page-header__container">
+        <h1 class="visually-hidden">Веб-страница PINK</h1>
+        <div class="page-header__menu">
+          <a class="page-header__logo">
+          <img class="page-header__logo-image" src="http://placehold.it/150x100" alt="Логотип PINK">
+          </a>
+          <button class="page-header__toggle" type="button">Развернуть/Свернуть</button>
+        </div>
+        <nav class="main-nav">
+          <ul class="main-nav__list site-list">
+            <li class="site-list__item stile-list__item--active">
+              <a class="site-list__link" href="index.html">Главная</a>
+            </li>
+            <li class="site-list__item">
+              <a class="site-list__link" href="photo.html">Фотографии</a>
+            </li>
+            <li class="site-list__item">
+              <a class="site-list__link">Конкурс</a>
+            </li>
+            <li class="site-list__item">
+              <a class="site-list__link" href="#">HTML Academy</a>
+            </li>
+          </ul>
+        </nav>
       </div>
-    </nav>
+    </div>
   </header>
 
   <main class="page-main">
     <section class="page-title">
-      <!--<<img class="page-title__image" src="http://placehold.it/150x100" alt="PINK">-->
-      <div class="page-title__container">
-        <h1 class="page-title__heading">Конкурс на самое безбашенное путешествие с Пинк</h1>
+      <div class="page-title__wrapper">
+        <div class="container">
+          <h1 class="page-title__heading">Конкурс на самое безбашенное путешествие с Пинк</h1>
+        </div>
       </div>
     </section>
 
     <form class="form" action="https://echo.htmlacademy.ru" method="post">
-      <div class="form__wrapper">
-        <p class="form__description">Поделитесь своей историей и получите шанс выиграть ценный приз - 1000 миль на вашу бонусную карту!</p>
-        <section class="form__section form__section--white">
-          <h2 class="visually-hidden">Заполните форму</h2>
-          <div class="form__group">
-            <label class="form__title form__title--name" for="surname">Фамилия:</label>
-            <input class="form__input" type="text" name="surname" id="surname" placeholder="Укажите фамилию" required>
-          </div>
-          <div class="form__group">
-            <label class="form__title form__title--name" for="name">Имя:</label>
-            <input class="form__input" type="text" name="name" id="name" placeholder="Введите ваше имя" required>
-          </div>
-          <div class="form__group">
-            <label class="form__title form__title--name" for="patronymic">Отчество</label>
-            <input class="form__input" type="text" name="patronymic" id="patronymic" placeholder="Ну и отчество тоже">
-          </div>
-        </section>
+      <div class="form__wrapper form__wrapper--name">
+        <div class="container">
+          <p class="form__description">Поделитесь своей историей и&nbsp;получите шанс выиграть ценный приз&nbsp;&mdash; 1000 миль на вашу бонусную карту! <span class="form__description--hidden">Пожалуйста,&nbsp;заполните&nbsp;форму ниже:</span> </p>
+          <section class="form__section form__section--white">
+            <h2 class="visually-hidden">Пожалуйста, заполните форму ниже:</h2>
+            <div class="form__group form__group--name">
+              <label class="form__title form__title--name" for="surname">Фамилия:</label>
+              <input class="form__input" type="text" name="surname" id="surname" placeholder="Укажите фамилию" required>
+            </div>
+            <div class="form__group form__group--name">
+              <label class="form__title form__title--name" for="name">Имя:</label>
+              <input class="form__input" type="text" name="name" id="name" placeholder="Введите ваше имя" required>
+            </div>
+            <div class="form__group form__group--name">
+              <label class="form__title form__title--name" for="patronymic">Отчество</label>
+              <input class="form__input" type="text" name="patronymic" id="patronymic" placeholder="Ну и отчество тоже">
+            </div>
+          </section>
+        </div>
       </div>
 
       <section class="form__section form__section--grey">
         <h2 class="visually-hidden">Заполните ваши достижения</h2>
         <div class="form__wrapper">
-          <fieldset class="form__fieldset">
-            <legend class="form__title">Ваши безбашенные достижения в путешествии</legend>
-            <ul class="form-list">
-              <li>
-                <input class="form-list__input form-list__input--checkbox" type="checkbox" name="shark" id="shark" checked>
-                <label class="form-list__item" for="shark">Сделал селфи с акулой</label>
-              </li>
-              <li>
-                <input class="form-list__input form-list__input--checkbox" type="checkbox" name="sunburn" id="sunburn" checked>
-                <label class="form-list__item" for="sunburn">Обгорел на пляже</label>
-              </li>
-              <li>
-                <input class="form-list__input form-list__input--checkbox" type="checkbox" name="chuck" id="chuck">
-                <label class="form-list__item" for="chuck">Видел Чака Норриса</label>
-              </li>
-              <li>
-                <input class="form-list__input form-list__input--checkbox" type="checkbox" name="souvenirs" id="souvenirs">
-                <label class="form-list__item" for="souvenirs">Накупил сувениров</label>
-              </li>
-              <li>
-                <input class="form-list__input form-list__input--checkbox" type="checkbox" name="tower" id="tower" checked>
-                <label class="form-list__item" for="tower">Удержал башню</label>
-              </li>
-              <li>
-                <input class="form-list__input form-list__input--checkbox" type="checkbox" name="hotel" id="hotel">
-                <label class="form-list__item" for="hotel">Разгромил отель</label>
-              </li>
-            </ul>
-          </fieldset>
+          <div class="container">
+            <fieldset class="form__fieldset">
+              <legend class="form__title">Ваши безбашенные достижения в путешествии</legend>
+              <ul class="form-list">
+                <li>
+                  <input class="form-list__input form-list__input--checkbox" type="checkbox" name="shark" id="shark" checked>
+                  <label class="form-list__item" for="shark">Сделал селфи с акулой</label>
+                </li>
+                <li>
+                  <input class="form-list__input form-list__input--checkbox" type="checkbox" name="sunburn" id="sunburn" checked>
+                  <label class="form-list__item" for="sunburn">Обгорел на пляже</label>
+                </li>
+                <li>
+                  <input class="form-list__input form-list__input--checkbox" type="checkbox" name="chuck" id="chuck">
+                  <label class="form-list__item" for="chuck">Видел Чака Норриса</label>
+                </li>
+                <li>
+                  <input class="form-list__input form-list__input--checkbox" type="checkbox" name="souvenirs" id="souvenirs">
+                  <label class="form-list__item" for="souvenirs">Накупил сувениров</label>
+                </li>
+                <li>
+                  <input class="form-list__input form-list__input--checkbox" type="checkbox" name="tower" id="tower" checked>
+                  <label class="form-list__item" for="tower">Удержал башню</label>
+                </li>
+                <li>
+                  <input class="form-list__input form-list__input--checkbox" type="checkbox" name="hotel" id="hotel">
+                  <label class="form-list__item" for="hotel">Разгромил отель</label>
+                </li>
+              </ul>
+            </fieldset>
+          </div>
         </div>
       </section>
 
-      <section class="form__section form__section--white">
+      <section class="form__section form__section--info form__section--white">
         <h2 class="visually-hidden">Заполните ваши номер и адрес электронной почты</h2>
-        <div class="form__wrapper">
-          <div class="form__group">
-            <label class="form__title form__title--name" for="tel">Номер телефона</label>
-            <input class="form__input" type="tel" name="tel" id="tel" placeholder="Номер, пожалуйста" pattern="[0-9]{1}-[0-9]{3}-[0-9]{7}">
-          </div>
-          <div class="form__group">
-            <label class="form__title form__title--name" for="email">Адрес почты</label>
-            <input class="form__input" type="email" name="email" id="email" placeholder="Введите почту" required>
+        <div class="container">
+          <div class="form__wrapper">
+            <div class="form__group form__group--info">
+              <label class="form__title form__title--name" for="tel">Номер телефона</label>
+              <input class="form__input" type="tel" name="tel" id="tel" placeholder="Номер, пожалуйста" pattern="[0-9]{1}-[0-9]{3}-[0-9]{7}">
+            </div>
+            <div class="form__group form__group--info">
+              <label class="form__title form__title--name" for="email">Адрес почты</label>
+              <input class="form__input" type="email" name="email" id="email" placeholder="Введите почту" required>
+            </div>
           </div>
         </div>
       </section>
 
-      <section class="form__section form__section--grey">
+      <section class="form__section form__section--platform form__section--grey">
         <h2 class="visually-hidden">Выберите платформу</h2>
-        <div class="form__wrapper">
-          <fieldset class="form__fieldset">
-            <legend class="form__title">С каким приложением путешествовали?</legend>
-            <ul class="platform">
-              <li>
-                <input class="platform__input platform__input--radio" type="radio" name="platform" value="Pink для iOS" id="iOS" checked>
-                <label class="platform__title" for="iOS">Pink для iOS</label>
-              </li>
-              <li>
-                <input class="platform__input platform__input--radio" type="radio" name="platform" value="Pink на Android" id="Android">
-                <label class="platform__title" for="Android">Pink на Android</label>
-              </li>
-              <li>
-                <input class="platform__input platform__input--radio" type="radio" name="platform" value="Windows Phone" id="Windows">
-                <label class="platform__title" for="Windows">Windows Phone</label>
-              </li>
-            </ul>
-          </fieldset>
+        <div class="container">
+          <div class="form__wrapper">
+            <fieldset class="form__fieldset">
+              <legend class="form__title">С каким приложением путешествовали?</legend>
+              <ul class="platform">
+                <li>
+                  <input class="platform__input platform__input--radio" type="radio" name="platform" value="Pink для iOS" id="iOS" checked>
+                  <label class="platform__title" for="iOS">Pink для iOS</label>
+                </li>
+                <li>
+                  <input class="platform__input platform__input--radio" type="radio" name="platform" value="Pink на Android" id="Android">
+                  <label class="platform__title" for="Android">Pink на Android</label>
+                </li>
+                <li>
+                  <input class="platform__input platform__input--radio" type="radio" name="platform" value="Windows Phone" id="Windows">
+                  <label class="platform__title" for="Windows">Windows Phone</label>
+                </li>
+              </ul>
+            </fieldset>
+          </div>
         </div>
       </section>
 
       <section class="form__section form__section--white">
         <h2 class="visually-hidden">Ваш отзыв</h2>
-        <div class="form__wrapper">
-          <fieldset>
-            <legend class="form__title">Опишите свои эмоции</legend>
-            <textarea class="form__input form__input--reference" name="reference" rows="8" cols="80" placeholder="Можно прям в красках, не стесняясь в выражениях"></textarea>
-          </fieldset>
+        <div class="container">
+          <div class="form__wrapper">
+            <fieldset class="form__fieldset">
+              <legend class="form__title">Опишите свои эмоции</legend>
+              <textarea class="form__input form__input--reference" name="reference" rows="8" cols="80" placeholder="Можно прям в красках, не стесняясь в выражениях"></textarea>
+            </fieldset>
+          </div>
         </div>
       </section>
 
       <div class="form__wrapper">
-        <button class="form__btn" type="submit">Отправить форму</button>
-        <p class="form__required">* - обязательные поля</p>
+        <div class="container">
+          <div class="form__wrapper--submit">
+            <button class="form__btn" type="submit">Отправить форму</button>
+            <p class="form__required">
+              <span class="form__star">*</span> &mdash; обязательные поля</p>
+          </div>
+        </div>
       </div>
     </form>
   </main>
 
   <footer class="page-footer">
-    <div class="page-footer__wrapper">
-      <a class="page-footer__logo" href="index.html">
-        <img class="page-footer__logo-image" src="http://placehold.it/150x100" alt="Логотип PINK">
-      </a>
-
-      <section class="social-links">
-        <h2 class="visually-hidden">Социальные сети</h2>
-        <a class="social-links__btn social-links__btn--twitter" href="#">Twitter</a>
-        <a class="social-links__btn social-links__btn--facebook" href="#">Facebook</a>
-        <a class="social-links__btn social-links__btn--youtube" href="#">Youtube</a>
-      </section>
-
-      <section class="copyright">
-        <h2 class="visually-hidden">Разработано компанией htmlacademy</h2>
-        <p class="copyright__text">Разработано
-          <a class="copyright__link" href="https://htmlacademy.ru/"></a>
-        </p>
-      </section>
+    <div class="container">
+      <div class="page-footer__wrapper page-footer__wrapper--photo">
+        <a class="page-footer__logo page-footer__logo--photo" href="index.html">Pink</a>
+        <div class="social-links">
+          <h2 class="visually-hidden">Социальные сети</h2>
+          <a class="social-links__item social-links__item--twitter" href="https://twitter.com/">Twitter</a>
+          <a class="social-links__item social-links__item--facebook" href="https://www.facebook.com/">Facebook</a>
+          <a class="social-links__item social-links__item--youtube" href="http://www.youtube.com/">YouTube</a>
+        </div>
+        <div class="page-footer__copyright">
+          <h2 class="visually-hidden">Разработано компанией htmlacademy</h2>
+          <p class="page-footer__copyright-text">Разработано<a class="page-footer__copyright-link" href="http://glukhanko.ru/" target="_blank">HTML Academy</a></p>
+        </div>
+      </div>
     </div>
   </footer>
 
-  <div class="popup popup--success">
-    <div class="popup__wrapper-top">
-      <h2 class="popup__title">Ваша заявка отправлена</h2>
-      <p class="popup__text">Спасибо за ваше участие, ваша заявка уже поступила к нам. В ближайшее время мы рассмотрим её и оповестим вас.</p>
-    </div>
-    <div class="popup__wrapper-bott">
-      <a class="popup__btn popup__btn--close" href="index.html">Закрыть окно</a>
+
+
+  <div class="popup popup__success">
+    <div class="container">
+      <div class="popup__wrapper">
+        <h2 class="popup__title">Ваша заявка отправлена</h2>
+        <p class="popup__text">Спасибо за&nbsp;ваше участвие, ваша заявка уже поступила к&nbsp;нам. В&nbsp;ближайшее время мы&nbsp;рассмотрим ее&nbsp;и&nbsp; оповестим&nbsp;вас.</p>
+        <button class="popup__btn popup__btn--close">Закрыть окно</button>
+      </div>
     </div>
   </div>
 
-  <div class="popup popup--fail">
-    <div class="popup__wrapper">
-      <h2 class="popup__title">Что-то пошло не так!</h2>
-      <p class="popup__text">Проверьте поля, выделенные красным, скорее всего вы забыли их заполнить</p>
-      <a class="popup__btn popup__btn--ok" href="#">ОК</a>
+
+  <!-- <div class="popup popup--success">
+  <div class="container">
+    <div class=" popup__wrapper popup__wrapper-top">
+      <h2 class="popup__title">Ваша заявка отправлена</h2>
+      <p class="popup__text">Спасибо за&nbsp;ваше участвие, ваша заявка уже поступила к&nbsp;нам. В&nbsp;ближайшее время мы&nbsp;рассмотрим ее&nbsp;и&nbsp; оповестим&nbsp;вас.</p>
+    </div>
+  </div>
+    <div class="popup__wrapper popup__wrapper-bott">
+      <div class="container">
+      <button class="popup__btn popup__btn--close" href="index.html">Закрыть окно</button>
+      </div>
+    </div>
+</div> -->
+
+
+
+  <div class="popup popup__fail">
+    <div class="container">
+      <div class="popup__wrapper">
+        <h2 class="popup__title">Что-то пошло не так!</h2>
+        <p class="popup__text">Проверьте поля, выделенные красным, скорее всего вы забыли их заполнить</p>
+        <button class="popup__btn popup__btn--ok">ОК</button>
+      </div>
     </div>
   </div>
 
